// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils / cssSnapshots with a custom renderer should process a file and log 1`] = `
Object {
  "exampleFileContents": "exampleFileContents__exampleFileContents---e3Nf2",
  "exampleFileName": "exampleFileContents__exampleFileName---yg7Zl",
}
`;

exports[`utils / cssSnapshots with file 'import.module.css' createExports should create an exports file 1`] = `
"declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;
"
`;

exports[`utils / cssSnapshots with file 'import.module.css' getClasses should return an object matching expected CSS 1`] = `
Object {
  "ClassB": "import-module__ClassB---2LsIz",
  "childA": "import-module__childA---2AUKk",
  "childB": "import-module__childB---1z-Zh",
  "class-c": "import-module__class-c---2JDAJ",
  "classA": "import-module__classA---2fO5r",
  "class_d": "import-module__class_d---2Dims",
  "fadeIn": "__import_module_css__fadeIn",
  "nestedChild": "import-module__nestedChild---1ZDxw",
  "parent": "import-module__parent---2kdvO",
}
`;

exports[`utils / cssSnapshots with file 'import.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'fadeIn';"
`;

exports[`utils / cssSnapshots with file 'test.module.css' createExports should create an exports file 1`] = `
"declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;
"
`;

exports[`utils / cssSnapshots with file 'test.module.css' getClasses should return an object matching expected CSS 1`] = `
Object {
  "ClassB": "test-module__ClassB---G7fhY",
  "childA": "test-module__childA---26dwC",
  "childB": "test-module__childB---13lLy",
  "class-c": "test-module__class-c---3Ouzp",
  "classA": "test-module__classA---KAOw8",
  "class_d": "test-module__class_d---3pjDe",
  "fadeIn": "__test_module_css__fadeIn",
  "nestedChild": "test-module__nestedChild---v7rOR",
  "parent": "test-module__parent---2tsUX",
}
`;

exports[`utils / cssSnapshots with file 'test.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'fadeIn';"
`;
